# SVF-RD

./: CMakeLists.txt  README.md  build.sh  clean.sh  setup.sh
include/RD/: LockObject.h  PointsToMap.h  RDGeneric.h  RaceDetect.h
lib/: CMakeLists.txt  Makefile
lib/CUDD/: CMakeLists.txt  Makefile
lib/MSSA/: Makefile
lib/MTA/: Makefile
lib/MemoryModel/: Makefile
lib/SABER/: Makefile
lib/Util/: Makefile
lib/WPA/: Makefile
tools/: CMakeLists.txt  Makefile
tools/DDA/: CMakeLists.txt
tools/RD/: CMakeLists.txt  LockObject.cpp  Makefile  PointsToMap.cpp  RDGeneric.cpp  RaceDetect.cpp
tools/SABER/: CMakeLists.txt
tools/WPA/: CMakeLists.txt  Makefile
