if(DEFINED IN_SOURCE_BUILD)
    set(LLVM_LINK_COMPONENTS bitwriter core ipo irreader instcombine instrumentation target linker analysis scalaropts support SVF CUDD)
    add_llvm_tool(saber saber.cpp)
else()
    if(LLVM_LINK_LLVM_DYLIB)
        set(llvm_libs LLVM)
    else()
        llvm_map_components_to_libnames(llvm_libs bitwriter core ipo irreader instcombine instrumentation target linker analysis scalaropts support transformutils)
    endif()

    add_executable(saber saber.cpp)
    target_link_libraries(saber SVF CUDD ${llvm_libs})
    set_target_properties(saber PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
endif()